--- a/src/app/pages/main/pages/collection/collection.page.html
+++ b/src/app/pages/main/pages/collection/collection.page.html
@@ -12,22 +12,29 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <!-- Collections scrollable list -->
-  <div class="w-full h-12 overflow-x-auto overflow-y-hidden flex flex-row pt-2 px-5">
-    @for (collection of (collections | orderByIndex); track collection) {
-      <div class="mr-7 shrink-0 relative active:text-sky-500" (click)="navigateToCollection(collection)">
-        <p class="font-bold text-2xl">{{ collection.name }}</p>
-        @if (selectedCollection?.id === collection.id) {
-          <span class="absolute bottom-0 w-1/3 h-0 border-b-4 border-sky-500 rounded-full"></span>
+  <!-- Collections navigation améliorée -->
+  <div class="collections-nav">
+    <div class="collection-tab-container">
+      <div class="flex flex-row space-x-2 overflow-x-auto scrollbar-hide">
+        @for (collection of (collections | orderByIndex); track collection) {
+          <div 
+            class="collection-tab shrink-0 relative"
+            [class.active]="selectedCollection?.id === collection.id"
+            (click)="navigateToCollection(collection)">
+            <span class="font-semibold text-sm whitespace-nowrap">{{ collection.name }}</span>
+            @if (selectedCollection?.id === collection.id) {
+              <div class="absolute -bottom-1 left-1/2 transform -translate-x-1/2 w-2 h-2 bg-white rounded-full"></div>
+            }
+          </div>
         }
       </div>
-    }
+    </div>
   </div>
 
-  <!-- Collection Streams -->
-  <div class="w-full h-fit mt-5 mb-20">
+  <!-- Collection Streams améliorés -->
+  <div class="stream-container">
     @for (feed of (selectedCollection?.feedList | orderByIndex); track feed) {
-      <div class="overflow-hidden will-change-transform">
+      <div class="stream-wrapper overflow-hidden will-change-transform">
         <app-stream
           [feedId]="feed.feedId" 
           [collectionId]="selectedCollection.id" 
